--- a/Homepage.html
+++ b/Homepage.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Les Bobines de Biche</title>
+    <title>Les Bobines de Biche.</title>
 </head>
 <body>
-    
+    <header>
+        <p>logo</p>
+    </header>
 </body>
 </html>
