--- a/Homepage.html
+++ b/Homepage.html
@@ -13,6 +13,7 @@
 
     <footer>
         <p>CGU</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio minus laborum iste numquam alias nobis perspiciatis quisquam unde quas, magni id provident cupiditate laboriosam at adipisci fuga eius. Expedita, dolorum.</p>
     </footer>
 </body>
 </html>
